mock-server/base/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mockserver-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - mockserver-gateway
  http:
  - route:
    - destination:
        host: http-mock-server-service.default.svc.cluster.local
        port:
          number: 3000
